nouveau display fails on nvidia GK107GLM [Quadro K1000M] on kernel-5.15.*
Fedora 35 laptop, Nvidia GK107GLM [Quadro K1000M] display, nouveau driver, any 5.15.* kernel released so far:
After grub, initial text messages, when it would normally switch to the Plymouth "loading" screen, the display continues to show the text messages.
When the login greeter should appear, the text messages remain on screen. However, the greeter is running, and if I enter my password (blind), the screen clears and my MATE desktop appears -- without a mouse pointer.
Even though the mouse pointer isn't displayed, as I move the mouse around, desktop icons highlight as the invisible mouse pointer moves over them. Menus work, terminals work, text selection with the mouse works -- all without showing the mouse icon.
At this point, if the screensaver kicks in, or if I switch to a virtual terminal (Ctrl-Alt-F2, say), the screen goes blank/black and nothing I've found will show any non-black pixels before a reboot.
Although the screen is blank, I can switch to a VT, login as root, and issue a reboot
, and it does reboot. Subsequent examination of journalctl output shows no errors. Comparing against logs from kernel-5.14.18-300.fc35 for example shows no unexpected differences.
Reproducible: Always
Steps to Reproduce:
- Boot any released kernel-5.15.* so far (5.15.10 as of right now)
Actual Results:
No Plymouth screen.
No greeter.
After (blind) login through invisible greeter, desktop works except for no mouse pointer.
If anything blanks the screen from then on, it remains blank until reboot.
Absolutely no indication of errors, warnings, or issues with nouveau or display in the logs.
Expected Results:
Plymouth "Fedora loading..." screen, followed by greeter, followed by working desktop, with ability to switch to VTs and back to desktop, and activate/deactivate screensaver, all of which works with all Fedora 35 kernels up through 5.14.18-300.
The only "interesting" difference I've found between 5.14 and 5.15 reports is the "size" that lshw
shows for "-cpu". Under kernel-5.14.18-300 (the one in which everything works) "-cpu / size: 1404MHz", whereas under kernel-5.15.7-200 lshw
shows "*-cpu / size: 1832MHZ". Whether that's somehow relevant I don't know.
This sounds suspiciously similar to #128 (closed)